# spellstone-ingest

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  deployments.yaml  pyproject.toml  template.env
flows/: stars.py
src/: serve.py
src/flows/: rss.py  stars.py
src/markdown/: frontmatter.py  md.py
src/obsidian_webhooks/: post.py
src/rss/: rss.py
